--- a/templates/DevicesByAddressReport.html
+++ b/templates/DevicesByAddressReport.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{# <link rel="stylesheet" href="{{ url_for('static', filename='styles.css.old') }}"> #}
+{# <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"> #}
 
 {% block content %}
     <h3>Количество элементов в списке: {{ data|length }}</h3>
