--- a/templates/TelegramUserReports.html
+++ b/templates/TelegramUserReports.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{# <link rel="stylesheet" href="{{ url_for('static', filename='styles.css.old') }}"> #}
+{# <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"> #}
 {% block content %}
 <h4>Количество столбцов(аттрибутов) в списке: {{ data[0]|length }}</h4>
 <h4>Количество элементов в списке: {{ data|length }}</h4>
