--- a/templates/index.html
+++ b/templates/index.html
@@ -2,27 +2,37 @@
 
     <h4>{% block title %} Добро пожаловать в Svyazist WebReports {% endblock title %}</h4>
  {% block content %}
-    <h4>Количество отчетов в списке: {{ reports_list|length }}</h4><hr><br>
+     <h4>Групп отчетов: {{ reports_group|length }}</h4>
+    <h4>Количество отчетов в группах: {{ reports_list|length }}</h4><hr><br>
      <h4>Выбор отчета для формирования:</h4><hr>
     {% for item in reports_list %}
         {% if item['DATE_REQ'] == 1 %}
         <form action="{{ item['METHOD_NAME'] }}" method="post">
-            <tr>
-                <td align="left">{{ item['NAME'] }}</td>
-                <td align="center"><input type="date" name="nDate" /></td>
-                <td align="center"><input type="date" name="kDate" /></td>
-                <td align="center"><input type="submit" value="Выполнить" /></td>
-            </tr>
-            <tr>
-
-            </tr>
+            <fieldset>
+                <legend>{{ item['NAME'] }}</legend>
+                <select name="abType" id="abTypeList">
+                    <option value = "">>------Тип абонента ------<</option>
+                    <option value = "1">Юр.лица</option>
+                    <option value = "0">Физ.лица</option>
+                </select>
+                {# <td align="center"><input type="number" name="abType" list="abTypeList" /></td> #}
+                <tr>
+                    {# <td align="left">{{ item['NAME'] }}</td> #}
+                    <td align="center"><input type="date" name="nDate" /></td>
+                    <td align="center"><input type="date" name="kDate" /></td>
+                    <td align="center"><input type="submit" value="Выполнить" /></td>
+                </tr>
+            </fieldset>
         </form>
         {% elif item['DATE_REQ'] == 0 %}
         <form action="{{ item['METHOD_NAME'] }}" method="get">
-             <tr>
-                <td align="left">{{ item['NAME'] }}</td>
-                <td align="center"><input type="submit" value="Выполнить" /></td>
-             </tr>
+            <legend>{{ item['NAME'] }}</legend>
+                <fieldset>
+                    <tr>
+                        {# <td align="left">{{ item['NAME'] }}</td> #}
+                        <td align="center"><input type="submit" value="Выполнить" /></td>
+                    </tr>
+                </fieldset>
         </form>
         {% endif %}
     {% endfor %}
