--- a/templates/base.html
+++ b/templates/base.html
@@ -5,19 +5,43 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="static/css/">
+
         {# Место для стилей и скриптов #}
-        <link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-        <script src = "https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src = "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-        <link rel = "stylesheet" href = "https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
-        <script src = "https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
-        <script src = "https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+        <script src = "https://code.jquery.com/jquery-3.5.1.js"></script>
+        <script src = "https://unpkg.com/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
+        <link rel = "stylesheet" href = "https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css">
+        <script src = "https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+        <script src = "https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
+        <script src="https://cdn.datatables.net/buttons/2.3.6/js/dataTables.buttons.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+        <script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.html5.min.js"></script>
+        <script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.print.min.js"></script>
+
         <script>
-            $(document).ready(function() {
-                    $('#reportTable').DataTable();
-                    } );
+            {# После полной загрузки структуры DOM выполняет преобразование данных в таблице с id: reportTable в DataTable методом из jQuery #}
+            $(document).ready(
+                function() {
+                    {# "order": [] отключает сортировку по-умолчанию, т.к. это ломает внешний вид некоторых отчетов #}
+                    $('#reportTable').DataTable(
+                        {
+                            "order": [],
+                            dom: 'Bfrtip',
+                            buttons:    [
+                                        'copy', 'csv', 'excel',
+                                        {
+                                            extend: 'pdfHtml5',
+                                            orientation: 'landscape',
+                                            pageSize: 'A4'
+                                        },
+                                        'print'
+                                        ]
+                        }
+                                                );
+                           } );
         </script>
 
         <title>
@@ -40,11 +64,13 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Отчеты
+            Быстрые отчеты
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             {% for item in reports_list %}
-              <li><a class="dropdown-item" href="{{ item['METHOD_NAME'] }}">{{ item['NAME'] }}</a></li>
+                {% if item['DATE_REQ'] == 0 %}
+                    <li><a class="dropdown-item" href="{{ item['METHOD_NAME'] }}">{{ item['NAME'] }}</a></li>
+                {% endif %}
             {% endfor %}
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>
@@ -54,10 +80,12 @@
           <a class="nav-link disabled">Отключенная</a>
         </li>
       </ul>
+    {#
       <form class="d-flex" role="search">
-        <input class="form-control form-control-sm" type="search" aria-label="Поиск" placeholder="Поиск" aria-controls="example">
-        {# <button class="btn btn-warning" type="submit">Поиск</button> #}
+         <input class="form-control form-control-sm" type="search" aria-label="Поиск" placeholder="Поиск" aria-controls="reportTable">
+        <button class="btn btn-warning" type="submit">Поиск</button>
       </form>
+    #}
     </div>
   </div>
 </nav>
