--- a/templates/report.html
+++ b/templates/report.html
@@ -12,7 +12,7 @@
 
 <h4>Количество столбцов(аттрибутов) в списке: {{ data[0]|length }}</h4>
 <h4>Количество элементов в списке: {{ data|length }}</h4>
-<table id="reportTable" class="table-bordered table-hover table-striped dataTable table-group-divider" style="width: 100%; text-align: center">
+<table id="reportTable" class="table-hover table-striped dataTable table-group-divider" style="width: 100%; text-align: center">
     <thead>
         <tr>
         {# Ячейки первой строки объеденим #}
