--- a/templates/auth_bad.html
+++ b/templates/auth_bad.html
@@ -2,6 +2,10 @@
 <form method="POST">
   <div class="container">
     <label><b>Введен неправильный логин или пароль</b></label>
+  </div>
+  <div class="container">
+    <span class="reg"> <a href="/">Попробовать еще раз</a></span>
+  </div>
 </form>
 
 <link rel="stylesheet" href="{{ url_for('static', filename= 'css/auth_bad.css') }}">
