--- a/templates/base.html
+++ b/templates/base.html
@@ -102,12 +102,15 @@
           <a class="nav-link disabled">Отключенная</a>
         </li>
       </ul>
-    <li class="nav-item">
+    <li class="nav-item dropdown">
         {% for item in user_info %}
-        <a class="nav-list disabled">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             {{ item['FULL_NAME'] }}
         </a>
         {% endfor %}
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="/logout">Выйти</a> </li>
+        </ul>
     </li>
     {#
       <form class="d-flex" role="search">
