--- a/templates/auth.html
+++ b/templates/auth.html
@@ -1,12 +1,12 @@
 <form method="POST">
   <div class="container">
+      <div class="container">
+        <span class="reg"><b>Авторизация</b></span></div>
     <label for="Login"><b>Логин</b></label>
     <input type="text" placeholder="" name="Login" required>
     <label for="Password"><b>Пароль</b></label>
     <input type="password" placeholder="" name="Password" required>
     <button type="submit">Войти</button>
-   {# <div class="container">
-    <span class="reg"> <a href="#">Регистрация</a></span>  #}
   </div>
 </form>
 
